# sreality

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FOLLOWUPS.md  README.md  ROADMAP.md  pyproject.toml  railway.json  railway.worker.json
.claude/: settings.json
.github/: pull_request_template.md
api/: __init__.py  agent.py  attachments.py  broker_review.py  building_orchestrator.py  building_runs.py  channel_client.py  curation.py  cursor.py  dependencies.py  estimate_yield.py  estimation_runs.py  feedback.py  filter_presets.py  llm_client.py  location_filter.py  main.py  manual_estimates.py  maps.py  model_compare.py  notification_outbox.py  notifications.py  outreach.py  pipeline.py  portal_lookup.py  price_stats.py  property_dedup.py  refiner.py  rent_map.py  schemas.py  skill_io.py  skills.py  tenant_pool.py  unsubscribe.py
chrome-extension/: .env.example  .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
data/: broker_franchise_domains.json  broker_free_email_domains.json  clip_taxonomy.json  condition_markers_curated.json  condition_markers_v1.json  condition_rubric_v1.json  csu_population.json  obce_v_datech_2025.csv  price_stat_cities.json
docs/: architecture.md
frontend/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  railway.json  tsconfig.json  vite.config.ts  vitest.setup.ts
migrations/: 001_initial.sql  002_image_storage.sql  003_listing_fetch_failures.sql  004_locality_ids.sql  005_total_floors.sql  006_freshness_checks.sql  007_amenities.sql  008_ui_read_policies.sql  010_estimation_runs.sql  011_browse_stats.sql  012_region_stats.sql  013_browse_stats_inactive_only.sql  013_health_summary.sql  014_browse_stats_inactive_only.sql  015_images_public.sql  016_locality_ids_extended.sql  016_region_stats_box.sql  017_admin_boundaries.sql  020_generic_url_parsing.sql  021_region_stats_box.sql  022_collections.sql  022_listings_category_fields.sql  023_listing_notes.sql  023_listings_public_extended.sql  024_browse_stats_filters.sql  024_listing_tags.sql  025_broker_fields.sql  025_curation_public_views.sql  026_listings_public_broker.sql  026_visual_layer.sql  027_visual_layer.sql  028_agent_runs.sql  028_health_summary_by_category.sql  028_transit_lines.sql  029_agent_runs.sql  029_sales_estimate.sql  030_sales_estimate.sql  031_estimation_subject_summary.sql  032_drop_unused_raw_json_gin.sql  032_skill_rental_estimator_full.sql  (+417 more)
roadmap/: analytical.md  archive.md  building-decomposition-track.md  dedup-track.md  listing-identity-track.md  map-track.md  map.md  next.md  operator-workflow-track.md  operator-workflow.md  public-release-track.md  scraper-track.md  scraper.md  skill-refinement-track.md  summarize-track.md  summarize.md  ui-track.md  ui.md
scraper/: area.py  bazos_client.py  bazos_main.py  bazos_parser.py  bezrealitky_client.py  bezrealitky_main.py  bezrealitky_parser.py  broker_idnes.py  ceskereality_client.py  ceskereality_main.py  ceskereality_parser.py  clip_tagger.py  db.py  floor.py  freshness.py  geocoding.py  hashing.py  idnes_client.py  idnes_main.py  idnes_parser.py  image_phash.py  image_storage.py  location.py  main.py  maxima_client.py  maxima_main.py  maxima_parser.py  media.py  mmreality_client.py  mmreality_main.py  mmreality_parser.py  overpass_client.py  parser.py  portal.py  portal_base.py  portal_runner.py  price_stats_client.py  price_stats_db.py  price_stats_enums.py  price_stats_main.py  (+19 more)
scripts/: aggregate_condition_markers.py  apply_dirty_broker_listings_pk_swap.py  apply_listings_pk_swap.py  apply_r2_constraints.py  apply_r2_maintenance_indexes.py  apply_r2_phase_d_prep.py  apply_r2_unique_guards.py  backfill_address_point_streets.py  backfill_bazos_coords.py  backfill_bazos_street_locality.py  backfill_child_listing_ids.py  backfill_condition_scores.py  backfill_geocode_coords.py  (+68 more)
(+721 files in other folders)
