[project]
name = "sreality-tracker"
version = "0.1.0"
description = "Daily scraper for Czech rental listings from sreality.cz"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32",
  "psycopg[binary]>=3.2",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
