[project]
name = "sreality-tracker"
version = "0.1.0"
description = "Daily scraper for Czech rental listings from sreality.cz"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32",
  "psycopg[binary]>=3.2",
  "boto3>=1.34",
  # Deterministic HTML parsing for the bazos crawler (scraper/bazos_parser.py).
  # Single lexbor wheel, CSS selectors; stdlib html.parser is too low-level for
  # bazos's class-based markup. Not needed by the sreality JSON path.
  "selectolax>=0.3",
  # Perceptual image hashing (dHash) for the Tier-2 dedup sweep's image
  # corroborator (scraper/image_phash.py). Pillow-only — no numpy/scipy.
  # Pre-approved in docs/design/multi-portal-dedup.md.
  "Pillow>=10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  # Parse .github/workflows/*.yml for the Settings "GitHub Actions" docs
  # codegen (scripts/generate_workflow_docs.py). Dev/CI-only — never
  # imported by the scraper or API at runtime.
  "pyyaml>=6.0",
]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "anthropic>=0.40",
  # Gemini backend for the reasoning agent (api/providers/gemini.py).
  # `google-generativeai` is deprecated; google-genai is the current SDK.
  "google-genai>=0.3",
  # Required by FastAPI's UploadFile / File() — used by the
  # /buildings/{id}/attachments endpoint for operator-supplied images.
  "python-multipart>=0.0.9",
]
# Used only by scripts/ingest_boundaries.py; kept out of the default
# install so the scraper / API images stay slim. Pure-Python combo
# (pyshp + shapely + pyproj) intentionally avoids geopandas / GDAL —
# we only need to read shapefiles, reproject EPSG:5514 -> EPSG:4326,
# and simplify polygons.
geo = [
  "pyshp>=2.3",
  "shapely>=2.0",
  "pyproj>=3.6",
]
# Used only by scraper/sreality_auth.py to mint a logged-in Seznam session
# cookie for the ceny-nemovitosti `estate_prices` stats API (which the listing
# scraper never needs). Kept out of the default install so the scraper / API
# images stay slim — only the price-stats workflow installs it. A captured
# cookie (SREALITY_SESSION_COOKIE) bypasses it entirely.
pricestats = [
  "playwright>=1.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scraper*", "toolkit*", "api*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
